crates/bc-cli/tests/cli/snapshots/cli__commodity__update_clears_an_active_date_with_an_empty_value.snap
---
source: crates/bc-cli/tests/cli/commodity.rs
assertion_line: 257
expression: output
---
success: true
exit_code: 0
----- stdout -----
[
  {
    "id": "[COMMODITY_ID]",
    "code": "AUD",
    "exchange": null,
    "name": "Australian Dollar",
    "description": null,
    "symbol": "A$",
    "aliases": [
      "AU$"
    ],
    "decimals": 2,
    "is_iso": true,
    "symbol_after": false,
    "active_from": null,
    "active_until": null
  },
  {
    "id": "[COMMODITY_ID]",
    "code": "BTC",
    "exchange": null,
    "name": "Bitcoin",
    "description": null,
    "symbol": "₿",
    "aliases": [],
    "decimals": 8,
    "is_iso": false,
    "symbol_after": false,
    "active_from": null,
    "active_until": null
  },
  {
    "id": "[COMMODITY_ID]",
    "code": "ETH",
    "exchange": null,
    "name": "Ethereum",
    "description": null,
    "symbol": "ETH",
    "aliases": [],
    "decimals": 9,
    "is_iso": false,
    "symbol_after": true,
    "active_from": null,
    "active_until": null
  },
  {
    "id": "[COMMODITY_ID]",
    "code": "EUR",
    "exchange": null,
    "name": "Euro",
    "description": null,
    "symbol": "€",
    "aliases": [],
    "decimals": 2,
    "is_iso": true,
    "symbol_after": false,
    "active_from": null,
    "active_until": null
  },
  {
    "id": "[COMMODITY_ID]",
    "code": "GBP",
    "exchange": null,
    "name": "British Pound",
    "description": null,
    "symbol": "£",
    "aliases": [],
    "decimals": 2,
    "is_iso": true,
    "symbol_after": false,
    "active_from": null,
    "active_until": null
  },
  {
    "id": "[COMMODITY_ID]",
    "code": "INR",
    "exchange": null,
    "name": "Indian Rupee",
    "description": null,
    "symbol": "₹",
    "aliases": [],
    "decimals": 2,
    "is_iso": true,
    "symbol_after": false,
    "active_from": null,
    "active_until": null
  },
  {
    "id": "[COMMODITY_ID]",
    "code": "JPY",
    "exchange": null,
    "name": "Japanese Yen",
    "description": null,
    "symbol": "¥",
    "aliases": [],
    "decimals": 0,
    "is_iso": true,
    "symbol_after": false,
    "active_from": null,
    "active_until": null
  },
  {
    "id": "[COMMODITY_ID]",
    "code": "KRW",
    "exchange": null,
    "name": "Korean Won",
    "description": null,
    "symbol": "₩",
    "aliases": [],
    "decimals": 0,
    "is_iso": true,
    "symbol_after": false,
    "active_from": null,
    "active_until": null
  },
  {
    "id": "[COMMODITY_ID]",
    "code": "USD",
    "exchange": null,
    "name": "US Dollar",
    "description": null,
    "symbol": "$",
    "aliases": [
      "US$"
    ],
    "decimals": 2,
    "is_iso": true,
    "symbol_after": false,
    "active_from": null,
    "active_until": null
  },
  {
    "id": "[COMMODITY_ID]",
    "code": "XPF",
    "exchange": null,
    "name": null,
    "description": null,
    "symbol": null,
    "aliases": [],
    "decimals": 2,
    "is_iso": true,
    "symbol_after": false,
    "active_from": "2020-01-01",
    "active_until": null
  }
]
----- stderr -----
