crates/bc-cli/tests/cli/snapshots/cli__commodity__update_json_reports_the_edited_commodity.snap
---
source: crates/bc-cli/tests/cli/commodity.rs
assertion_line: 265
expression: output
---
success: true
exit_code: 0
----- stdout -----
{
  "code": "AUD",
  "id": "[COMMODITY_ID]"
}
----- stderr -----
