crates/bc-cli/tests/cli/snapshots/cli__commodity__update_rejects_removing_an_absent_alias.snap
---
source: crates/bc-cli/tests/cli/commodity.rs
expression: output
---
success: false
exit_code: 1
----- stdout -----
----- stderr -----
error: no alias 'nope' to remove
