crates/bc-cli/tests/cli/snapshots/cli__commodity__update_rejects_the_same_alias_twice.snap
---
source: crates/bc-cli/tests/cli/commodity.rs
assertion_line: 294
expression: output
---
success: false
exit_code: 1
----- stdout -----
----- stderr -----
error: alias 'buck' already set
